# Chess_Checkers

./: .gitignore  Bishop.cpp  Bishop.hpp  Bishop_test.hpp  CMakeLists.txt  Checker.cpp  Checker.hpp  CheckerMove.hpp  Checker_test.hpp  Checkers.cpp  Checkers.hpp  Chess.cpp  Chess.hpp  Chess_test.hpp  DiagonalMove.hpp  Game.cpp  Game.hpp  Gameplay.cpp  Gameplay.hpp  King.cpp  King.hpp  King_test.hpp  Knight.cpp  Knight.hpp  KnightMove.cpp  KnightMove.hpp  Knight_test.hpp  MoveInterface.hpp  Pawn.cpp  Pawn.hpp  Pawn_test.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Queen_test.hpp  README.md  Rook.cpp  Rook.hpp  Rook_test.hpp  (+12 more)
